Adds a new endpoint to delete multiple templates
- Adds unittests
- Updates Swagger docs
